[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Player/vaccine_ship_player.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scenes/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scenes/Player/FocusHitbox.png" type="Texture" id=3]
[ext_resource path="res://Assets/Scenes/Player/Bullet Control.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "focused",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 20 )

[node name="Player" type="Area2D"]
position = Vector2( 160, 120 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerAnimation" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 1 )

[node name="FocusAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Bullet Control" parent="." instance=ExtResource( 4 )]
position = Vector2( 32, 0 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
